<resources>
    <string name="app_name" translatable="false">EcoPower</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="nv">New on EcoPower ?</string>
    <string name="creer_compte">CREATE AN ACCOUNT</string>
    <string name="connect">CONNECT</string>
    <string name="mdp">Password</string>
    <string name="mdp_oublie">FORGOT PASSWORD ?</string>
    <string name="identifiez_vous">Sign in</string>
    <string name="or">  OR  </string>
    <string name="connectez_vous">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create an account</string>
    <string name="name">First name</string>
    <string name="lastname">Last name</string>
    <string name="phone">Phone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="previous" translatable="false"><![CDATA[<]]></string>
    <string name="next">Next</string>
    <string name="area">Area</string>
    <string name="add_appliance">Add Appliance</string>
    <string name="wattage">Wattage</string>
    <string name="reference">Reference</string>
    <string name="email">E-mail</string>
    <string name="etage">Floor</string>
    <string name="fill_fields">Please complete all fields</string>
    <string name="successful_reg">Successful registration!</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="mes_notifications">My notifications</string>
    <string name="mes_pr_f_rences">My preferences</string>
    <string name="se_d_connecter">Log out</string>
    <string name="habitats">Habitats</string>
    <string name="mon_habitat">My habitat</string>
    <string name="my_informations">My information</string>
    <string name="my_habitat">My habitat</string>
    <string name="appliances">Appliances</string>
    <string name="edit_my_appliances">Edit my appliances</string>
    <string name="month_year">Month, Year</string>
    <string name="l">M</string>
    <string name="m">T</string>
    <string name="me">W</string>
    <string name="j">T</string>
    <string name="v">F</string>
    <string name="s">S</string>
    <string name="d">S</string>
    <string name="habitat_information">Habitat information</string>
    <string name="total_consumption">Total consumption</string>
    <string name="floor">Floor</string>
    <string name="add_appliances">Add Appliances</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="next_month" translatable="false"><![CDATA[>]]></string>
    <string name="welcome">Welcome 👋</string>
    <string name="no_notification">No notification</string>
    <string name="about">About</string>
    <string name="confirm_e_mail">Confirm e-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_profile">Edit profile</string>


</resources>