<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/joli_vert"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/retour"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:textSize="20sp">
        </TextView>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/joli_vert"
        android:layout_marginStart="20dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="50dp">

            <ImageView
                android:layout_width="43dp"
                android:layout_height="36dp"
                android:src="@drawable/me"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp">
            </ImageView>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="18sp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@color/joli_vert"
                >
            </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/lastname"
            android:textSize="18sp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginStart="44dp"
            android:textColor="@android:color/darker_gray"
            android:backgroundTint="@color/joli_vert">

        </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="50dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:src="@drawable/mail2"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp">
        </ImageView>

        <EditText
            android:id="@+id/editTextMail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray"
            android:backgroundTint="@color/joli_vert">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="50dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:src="@drawable/cadena"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp">
        </ImageView>

        <EditText
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mdp"
            android:textSize="18sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/joli_vert">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="50dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:src="@drawable/phone"
            android:layout_gravity="center_vertical">
        </ImageView>
        <Spinner
            android:id="@+id/prefixeTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>
        <EditText
            android:id="@+id/editTextPhone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="18sp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/joli_vert"
            android:backgroundTint="@color/joli_vert">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/rect"
        android:textSize="20sp"
        android:textColor="#FFFF"
        android:layout_gravity="center">

    </Button>
    </LinearLayout>
</LinearLayout>