<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditAppliancesFragment"
    android:layout_marginTop="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/editAppliancesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnAddAppliance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect2"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/editAppliancesContainer"
            android:layout_alignStart="@id/backsave"
            android:layout_alignEnd="@id/backsave"
            android:text="@string/add_appliances"/>

        <LinearLayout
            android:id="@+id/backsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/btnAddAppliance">
            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect3"
                android:text="@string/back"
                android:layout_marginRight="5dp"/>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/save"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>