<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="60dp"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="50"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/joli_vert">
                </TextView>
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="18sp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/darker_gray"
                    android:backgroundTint="@color/joli_vert">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="50">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/joli_vert">
                </TextView>
                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:textSize="18sp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/darker_gray"
                    android:backgroundTint="@color/joli_vert">
                </EditText>
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/joli_vert">
                </TextView>

                <EditText
                    android:id="@+id/editTextMail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="18sp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/darker_gray"
                    android:backgroundTint="@color/joli_vert">
                </EditText>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_e_mail"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/joli_vert">
            </TextView>

            <EditText
                android:id="@+id/editTextMail2"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_e_mail"
                android:textSize="18sp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@color/joli_vert">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/joli_vert">
            </TextView>

            <EditText
                android:id="@+id/editTextMdp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mdp"
                android:textSize="18sp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@color/joli_vert">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/joli_vert">
            </TextView>

            <EditText
                android:id="@+id/editTextMdp2"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textSize="18sp"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/darker_gray"
                android:backgroundTint="@color/joli_vert">
            </EditText>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="40dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:src="@drawable/phone"
                    android:layout_gravity="center_vertical">
                </ImageView>
                <Spinner
                    android:id="@+id/prefixeTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
                <EditText
                    android:id="@+id/editTextPhone"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textSize="18sp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/joli_vert"
                    android:backgroundTint="@color/joli_vert">
                </EditText>
            </LinearLayout>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@drawable/rect"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>